--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:mysql://localhost/db_inventory?allowPublicKeyRetrieval=true&serverTimezone=America/Mexico_City&useSSL=false
+spring.main.allow-circular-references=true
+spring.datasource.username=julscode
+spring.datasource.password=Chuchuluco2204*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+spring.jpa.properties.hibernate.format_sql=true
